# CoffeeDB

./: .gitignore  CoffeeERD  CreateCoffeeDB
Tables/: beans.sql  beansorder.sql  burr.sql  cupping.sql  farm.sql  grinder.sql  operator.sql  order.sql  organization.sql  roast.sql  scale.sql  supplier.sql  varietal.sql
coffeeETL/: Cargo.toml
coffeeETL/src/: config.rs  extract.rs  main.rs
coffeeETL/src/extract/: parse.rs  structures.rs
coffeeETL/src/load/: connect.rs
