[package]
name = "coffeeETL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
glob = "0.3.1"
postgres = "0.19.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
